# pydantic-django-forms

./: README.md  pyproject.toml
src/pydantic_django_forms/: __init__.py  forms.py
test/: manage.py  test_fields.py  test_forms.py  test_integration.py  test_pdf.py
test/pdf_test/: asgi.py  settings.py  urls.py  views.py  wsgi.py
test/templates/: integration_test.html  simple_form.html
